# equity-research-automation

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: update_project_md.py
config/: assumptions.yaml  chart_of_accounts.yaml  market_data.yaml
examples/: financials.json  mwc_model.xlsx  mwc_research_note.docx  validation.json
extraction/: pdf_reader.py  run.py  segments.py  statements.py  validate.py
model_populate/: dcf.py  recalc_check.py  run.py  style.py  workbook.py
news_scraper/: run.py
pipeline/: config.py  logger.py  models.py  run_all.py  schema.py
prompts/: analyze_mdna.txt  extract_cover.txt  extract_segments.txt  extract_statements.txt  narrative.txt  summarize_news.txt
report_generator/: build.py  charts.py  narrative.py
transcript_processor/: run.py
